# npu-tts-rk3576

./: .gitignore  LICENSE  README.md  convert_decoder.py  convert_decoder_v2.py
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  audio_utils.cpp  audio_utils.h  npu_tts_jni.cpp  onnx_encoder.cpp  onnx_encoder.h  rknn_decoder.cpp  rknn_decoder.h  rknn_stub.c
android/app/src/main/cpp/onnxruntime/: README.md
android/app/src/main/cpp/rknn/: README.md
android/app/src/main/java/com/nputts/rk3576/: AudioPlayer.kt  MainActivity.kt  NpuTtsEngine.kt  NpuTtsNative.kt  PinyinToPhoneme.kt
android/app/src/main/jniLibs/: README.md
models/: README.md
scripts/: piper_decoder2rknn.py  prepare_models.sh
